--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="index.html">Saydul Akbar Murad</a>
         </h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/AkbarSaydul" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://web.facebook.com/sydulakbar.mmurrad" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.linkedin.com/in/saydul-akbar-murad-0963001a5/" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
@@ -107,11 +107,10 @@
         <div class="section-title">
           <h2>About</h2>
           <p class="job-description">
-            Saydul Akbar Murad is a researcher who has completed B.Sc. Engr.
-            degree in Information and Communication Engineering (ICE), Noakhali Science and Technology University
-            (NSTU),
-            Noakhali, Bangladesh. He is Currently pursuing his master’s degree
-            in Faculty of Computing, Universiti Malaysia Pahang, Malaysia.
+            I am a current master's student in the Faculty of Computing at Universiti Malaysia Pahang (UMP),
+            Malaysia. Here, I am working in the System network and Security Lab. I earned my Bachelor's degree in 
+            Information and Communication Engineering (ICE) at Noakhali Science and Technology University (NSTU), 
+            Noakhali, Bangladesh. .
           </p>
         </div>
 
@@ -211,7 +210,7 @@
                   </button>
                   <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                     <a
-                      href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:Tyk-4Ss8FVUC">Link</a>
+                      href="https://www.sciencedirect.com/science/article/pii/S1319157822001112">Link</a>
                   </button>
                 </div>
               </div>
@@ -234,7 +233,7 @@
                 </button>
                 <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:Y0pCki6q_DkC">Link</a>
+                    href="https://www.techscience.com/iasc/v34n1/47357">Link</a>
                 </button>
               </div>
             </div>
@@ -256,7 +255,7 @@
                 <button onClick="openTab(this)" href="#" name="assets/files/j-3.pdf" type="button"
                   class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:WF5omc3nYNoC">Link</a>
+                    href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0269134">Link</a>
                 </button>
               </div>
             </div>
@@ -277,8 +276,7 @@
                 </button>
                 <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:ufrVoPGSRksC">
-                    Link</a>
+                    href="https://www.mdpi.com/1424-8220/22/11/4157">Link</a>
                 </button>
               </div>
             </div>
@@ -338,7 +336,7 @@
                 </button>
                 <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:u5HHmVD_uO8C">Link</a>
+                    href="https://dl.acm.org/doi/abs/10.1145/3411174.3411185">Link</a>
                 </button>
               </div>
             </div>
@@ -360,7 +358,7 @@
                 </button>
                 <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:d1gkVwhDpl0C">
+                    href="https://ieeexplore.ieee.org/abstract/document/9537096">
                     Link</a>
                 </button>
               </div>
@@ -383,7 +381,7 @@
                 </button>
                 <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                   <a
-                    href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:UeHWp8X0CEIC">
+                    href="https://ieeexplore.ieee.org/abstract/document/9689812">
                     Link</a>
                 </button>
               </div>
@@ -399,13 +397,13 @@
               </div>
               <div>
                 <div class="pdf-button ">
-                  <button type="button" class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
-                    <a
-                      href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:IjCSPb-OGe4C">Pdf</a>
-                  </button>
+                 <button onClick="openTab(this)" href="#" name="assets/files/i-4.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
                   <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                     <a
-                      href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:IjCSPb-OGe4C">Link</a>
+                      href="https://ieeexplore.ieee.org/abstract/document/9689891">Link</a>
                   </button>
                 </div>
               </div>
@@ -427,7 +425,7 @@
                   </button>
                   <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                     <a
-                      href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:qjMakFHDy7sC">Link</a>
+                      href="https://ieeexplore.ieee.org/abstract/document/9689820">Link</a>
                   </button>
                 </div>
               </div>
@@ -449,7 +447,7 @@
                   </button>
                   <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
                     <a
-                      href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=JSlhN54AAAAJ&citation_for_view=JSlhN54AAAAJ:2osOgNQ5qMEC">
+                      href="https://ieeexplore.ieee.org/abstract/document/9689791">
                       Link</a>
                   </button>
                 </div>
@@ -561,14 +559,25 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <div class="publication-item pb-0">
-              <h4>Adjunct Faculty</h4>
+             <div class="publication-item">
+              <h4>Graduate Research Assistant</h4>
               <p class="job-description">
-                Electronics and Telecommunication Engineering, International
-                Islamic University Chittagong. Here, I am taking classes on
-                Database management system (DBMS).
+                Faculty of Computing, Universiti Malaysia Pahang. Working as a
+                research assistant in a networking lab. My research topic is "New Priority Rule Job Scheduling Technique that
+                Utilizes Gaps to Increase the Efficiency of Job Distribution".
               </p>
-              <p class="job-date">August 2022 – Present</p>
+              <p class="job-date">February 2021 – Present</p>
+            </div>
+
+            <div class="publication-item pb-0">
+              <h4>Adjunct Faculty (Lecturer)</h4>
+              <p class="job-description">
+                Dept. of Electronics and Telecommunication Engineering, International
+                Islamic University Chittagong, Bangladesh. Here, I had taken classes on
+                Database management system (DBMS). Besides, I also took the lab
+                classes. 
+              </p>
+              <p class="job-date">August 2022 – December 2022</p>
             </div>
 
             <div class="publication-item">
@@ -581,7 +590,11 @@
               </p>
               <p class="job-date">Feb 2020 – Jan 2021</p>
             </div>
-            <div class="publication-item">
+
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+             <div class="publication-item">
               <h4>Industrial Trainee</h4>
               <p class="job-description">
                 BTCL Nandankanon, Chittagong branch. Industrial training at
@@ -591,17 +604,7 @@
               </p>
               <p class="job-date">Feb 2019 – March 2019</p>
             </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="publication-item">
-              <h4>Research Assistant</h4>
-              <p class="job-description">
-                Faculty of Computing, Universiti Malaysia Pahang. Working as a
-                research assistant in a networking lab. My research topic is a
-                new priority algorithm for job scheduling at cloud computing.
-              </p>
-              <p class="job-date">February 2021 – Present</p>
-            </div>
+
             <div class="publication-item">
               <h4>Research Assistant</h4>
               <p class="job-description">
@@ -616,9 +619,8 @@
               <h4>Assistant Director</h4>
               <p class="job-description">
                 I had worked as an assistant director at Vertex university
-                admission coaching for science faculty. I had controlled 200
-                students by maintaining their class schedules and solving
-                various problems.
+                admission coaching. I had controlled 200 students by maintaining 
+                their classes and solving various problems.
               </p>
               <p class="job-date">May 2018 – Jan 2019</p>
             </div>
@@ -639,8 +641,11 @@
           <div class="col-lg-10" data-aos="fade-up">
             <ul>
               <li>
+                Master's Research Scholarship 2021, UMP, Malaysia. 
+              </li>
+              <li>
                 Best Research Paper Award in the 9th International Conference
-                on Computer and Communications Management, ACM, 2020
+                on Computer and Communications Management, ACM, 2020.
               </li>
               <li>
                 3rd Place at NSTU Intra University Programming Contest 2016.
@@ -672,6 +677,9 @@
             <ul>
               <li>
                 IEEE Access
+              </li>
+              <li>
+                4th International Conference on Communication and Intelligent Systems (ICCIS 2022)
               </li>
               <li>
                 Journal of Experimental & Theoretical Artificial Intelligence
@@ -710,7 +718,10 @@
               <h5>Workshops And Presentation</h5>
             </div>
             <ul>
-              <li class="voluntary-li">
+              <li class="voluntary-li"> 
+                <strong>Oral Presentation</strong>, at National Conference for Postgraduate Research (NCON-PGR), 2022, UMP, Malaysia.
+              </li>
+              <li class="voluntary-li"> 
                 <strong>Oral Presentation</strong>, at 2021 Emerging Technology in Computing, Communication, and
                 Electronics (ETCCE), Dhaka, Bangladesh.
               </li>
