--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             I am a current master's student in the Faculty of Computing at Universiti Malaysia Pahang (UMP),
             Malaysia. Here, I am working in the System network and Security Lab. I earned my Bachelor's degree in 
             Information and Communication Engineering (ICE) at Noakhali Science and Technology University (NSTU), 
-            Noakhali, Bangladesh. .
+            Noakhali, Bangladesh.
           </p>
         </div>
 
@@ -284,7 +284,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [5]. Israt Jahan, K. M. Aslam Uddin 1,
+                  [5]. Israt Jahan, K. M. Aslam Uddin,
                   <strong>Saydul Akbar Murad</strong>, M. Saef Ullah Miah,
                   Tanvir Zaman Khan, Mehedi Masud, Sultan Aljahdali and Anupam Kumar Bairagi “4D: A Real-Time Driver
                   Drowsiness Detector
@@ -325,7 +325,8 @@
                 [1]. Md. Kowsher, Anik Tahabilder,
                 <strong>Saydul Akbar Murad</strong>
                 <strong>“Impact learning: A Robust machine learning
-                  algorithm”</strong>. ACM Conference.
+                  algorithm”</strong>. Proceedings of the 8th International Conference on 
+                  Computer and Communications Management (ICCCM 2020).
               </p>
             </div>
             <div>
