--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h2>Research Interest</h2>
             <p class="job-description">
-              Machine Learning, Deep Learning, Neural Network, Cloud
+              Cybersecurity, Machine Learning, Deep Learning, Neural Network, Cloud
               Computing.
             </p>
             <div class="row">
@@ -195,9 +195,9 @@
               <div class="job-description p-2 ">
                 <p>
                   [1]. <strong>Saydul Akbar Murad</strong>, Abu Jafar Md
-                  Muzahid, and Zafril Rizal Bin M Azmi “A Review on Job
+                  Muzahid, and Zafril Rizal Bin M Azmi <strong> “A Review on Job
                   Scheduling Technique in Cloud Computing and Priority Rule
-                  Based Intelligent Framework” Journal of King Saud
+                  Based Intelligent Framework” </strong> Journal of King Saud
                   University-Computer and Information Sciences. <strong> (IF 8.839) </strong>
 
                 </p>
@@ -216,11 +216,35 @@
               </div>
             </div>
 
+
             <div class="job-description p-2 ">
               <p>
-                [2]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
-                MUZAHID and Apurba Adhikary “AI Powered Asthma Prediction
-                Towards Treatment Formulation: An Android App Approach” in
+                [2]. Abu Jafar Md Muzahid, Syafiq Fauzi Kamarulzaman,
+                Md Arafatur Rahman, <strong> Saydul Akbar Murad</strong>, Md Abdus Samad Kamal and Ali H Alenezi <strong> “Multiple vehicle cooperation
+                and collision avoidance in automated vehicles: 
+                survey and an AI-enabled conceptual framework” </strong> Scientific Reports. <strong>(IF 4.996) </strong>
+
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/j-6.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                    href="https://www.nature.com/articles/s41598-022-27026-9?fbclid=IwAR04Rumk-Pnx01gChkjGnnQWMgW28SXvRGUVJ22CP6Uvr6qtilq1vVSt9ZE">Link</a>
+                </button>
+              </div>
+            </div>
+
+
+            <div class="job-description p-2 ">
+              <p>
+                [3]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
+                MUZAHID and Apurba Adhikary <strong> “AI Powered Asthma Prediction
+                Towards Treatment Formulation: An Android App Approach” </strong> in
                 Intelligent Automation & Soft Computing. <strong>(IF 3.41) </strong>
 
               </p>
@@ -237,14 +261,15 @@
                 </button>
               </div>
             </div>
+
             <div class="job-description p-2 ">
               <p>
-                [3]. Apurba Adhikary, Joy Bhuiya,
+                [4]. Apurba Adhikary, Joy Bhuiya,
                 <strong>Saydul Akbar Murad</strong>, Md. Bipul Hossain, K. M.
                 Aslam Uddin,MD Estihad Faysal, Abidur Rahaman, Anupam Kumar
-                Bairagi “Performance Evaluation of Micro Lens Arrays:
+                Bairagi <strong> “Performance Evaluation of Micro Lens Arrays:
                 Improvement of Light Intensity and Efficiency of White Organic
-                Light-Emitting Diodes” in PLOS ONE. <strong>(IF 3.752) </strong>
+                Light-Emitting Diodes” </strong> in PLOS ONE. <strong>(IF 3.752) </strong>
               </p>
             </div>
             <div>
@@ -261,10 +286,10 @@
             </div>
             <div class="job-description p-2 ">
               <p>
-                [4]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
+                [5]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
                 <strong>Saydul Akbar Murad</strong>, Anupam Kumar Bairagi,
-                Mehedi Masud, and Mohammed Baz “Transfer Learning for
-                Sentiment Analysis Using BERT Base Supervised Fine Tuning” in
+                Mehedi Masud, and Mohammed Baz <strong> “Transfer Learning for
+                Sentiment Analysis Using BERT Base Supervised Fine Tuning” </strong> in
                 Sensors. <strong>(IF 3.847)</strong>
               </p>
             </div>
@@ -284,11 +309,11 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [5]. Israt Jahan, K. M. Aslam Uddin,
+                  [6]. Israt Jahan, K. M. Aslam Uddin,
                   <strong>Saydul Akbar Murad</strong>, M. Saef Ullah Miah,
-                  Tanvir Zaman Khan, Mehedi Masud, Sultan Aljahdali and Anupam Kumar Bairagi “4D: A Real-Time Driver
+                  Tanvir Zaman Khan, Mehedi Masud, Sultan Aljahdali and Anupam Kumar Bairagi  <strong> “4D: A Real-Time Driver
                   Drowsiness Detector
-                  Using Deep Learning” Electronics, MDPI. <strong> (IF 2.690) </strong>
+                  Using Deep Learning” </strong> Electronics, MDPI. <strong> (IF 2.690) </strong>
     
                 </p>
               </div>
@@ -341,9 +366,31 @@
                 </button>
               </div>
             </div>
+
             <div class="job-description p-2 ">
               <p>
-                [2]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal Bin M
+                [2]. Apurba Adhikary, <strong>Saydul Akbar Murad</strong>, Md. Shirajum Munir, and Choong Seon Hong 
+                <strong>“Edge Assisted Crime Prediction and Evaluation
+                  Framework for Machine Learning Algorithms”</strong>. 2022 International Conference on Information Networking (ICOIN).
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/c-1.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                    href="https://ieeexplore.ieee.org/document/9687156">Link</a>
+                </button>
+              </div>
+            </div>
+
+
+            <div class="job-description p-2 ">
+              <p>
+                [3]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal Bin M
                 Azmi, Nusrat Jahan Prottasha, and Md Kowsher
                 <strong>“Computer-aided system for extending the performance of
                   diabetes analysis and prediction”</strong>
@@ -366,7 +413,7 @@
             </div>
             <div class="job-description p-2 ">
               <p>
-                [3]. <strong>Saydul Akbar Murad</strong>, ABU JAFAR MD MUZAHID,
+                [4]. <strong>Saydul Akbar Murad</strong>, ABU JAFAR MD MUZAHID,
                 Zafril Rizal Bin M Azmi and Imran Sunny
                 <strong>“Comparative study on job scheduling using priority rule
                   and machine learning.”</strong>
@@ -388,7 +435,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [4]. Md Shamimul Islam, Md Mahedi Hasan, Sohaib Abdullah,
+                  [5]. Md Shamimul Islam, Md Mahedi Hasan, Sohaib Abdullah,
                   Jalal Uddin Md Akbar, N H M Arafat,
                   <strong>Saydul Akbar Murad</strong>
                   <strong>“A deep Spatio-temporal network for vision-based sexual
@@ -410,7 +457,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [5]. ABU JAFAR MD MUZAHID, Md. Abdur Rahim,<strong>Saydul Akbar Murad</strong>, Syafiq Fauzi
+                  [6]. ABU JAFAR MD MUZAHID, Md. Abdur Rahim,<strong>Saydul Akbar Murad</strong>, Syafiq Fauzi
                   Kamrulzaman and Md Arafatur Rahman
                   <strong>“Optimal Safety Planning and driving Decision-Making for
                     Multiple Autonomous Vehicles: A learning Based
@@ -432,7 +479,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [6]. N H M Arafat, Md Ileas Pramanik, Abu Jafar Md Muzahid,
+                  [7]. N H M Arafat, Md Ileas Pramanik, Abu Jafar Md Muzahid,
                   Bibo Lu, Sumaiya Jahan and
                   <strong>Saydul Akbar Murad</strong>
                   <strong>“A Conceptual Anonymity Model to Ensure Privacy for
