--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Saydul Akbar Murad</h1>
       <p>
-        I'm
-        <span class="typed" data-typed-items="Research Assistant at Universiti Malaysia Pahang"></span>
+        Graduate Research Assistant at The University of Southern Mississippi
       </p>
     </div>
   </section>
@@ -107,10 +106,11 @@
         <div class="section-title">
           <h2>About</h2>
           <p class="job-description">
-            I am a current master's student in the Faculty of Computing at Universiti Malaysia Pahang (UMP),
-            Malaysia. Here, I am working in the System network and Security Lab. I earned my Bachelor's degree in 
-            Information and Communication Engineering (ICE) at Noakhali Science and Technology University (NSTU), 
-            Noakhali, Bangladesh.
+            I am currently a PhD student at the School of Computing Sciences & Engineering in Southern Mississippi University, USA, 
+            where I am working on Peer-to-Peer Networks. My previous academic achievement includes a Master of Science in 
+            Computer Science from University Malaysia Pahang, where my research focused on Job Scheduling Technique for Cloud Computing. 
+            I also hold a Bachelor's degree in Information and Communication Engineering (ICE) from Noakhali Science and Technology 
+            University (NSTU), Noakhali, Bangladesh.
           </p>
         </div>
 
@@ -133,8 +133,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h2>Research Interest</h2>
             <p class="job-description">
-              Cybersecurity, Machine Learning, Deep Learning, Neural Network, Cloud
-              Computing.
+              P2P Network, Cybersecurity, Machine Learning, Neural Network, Cloud Computing.
             </p>
             <div class="row">
               <div class="col-lg-10">
@@ -174,6 +173,7 @@
             </div>
 
             <h6> <a href=""><strong>saydulakbarmurad@gmail.com</strong></a></h6>
+            <h6> <a href=""><strong>saydulakbar.murad@usm.edu</strong></a></h6>
           </div>
         </div>
       </div>
@@ -198,7 +198,7 @@
                   Muzahid, and Zafril Rizal Bin M Azmi <strong> “A Review on Job
                   Scheduling Technique in Cloud Computing and Priority Rule
                   Based Intelligent Framework” </strong> Journal of King Saud
-                  University-Computer and Information Sciences. <strong> (IF 8.839) </strong>
+                  University-Computer and Information Sciences. <strong> (IF 9.006) </strong>
 
                 </p>
               </div>
@@ -607,6 +607,16 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="publication-item">
+              <h4>Graduate Research Assistant</h4>
+              <p class="job-description">
+                School of Computing Sciences & Engineering, University of Souther Mississippi. Currently, working to depeloved a P2P network 
+                system using Linear Diophantine Equation (LDE). Besides I am working on Machine Learning in Cybersecurity and Blockchain system.
+              </p>
+              <p class="job-date">February 2023 – Present</p>
+            </div>
+
              <div class="publication-item">
               <h4>Graduate Research Assistant</h4>
               <p class="job-description">
@@ -614,7 +624,7 @@
                 research assistant in a networking lab. My research topic is "New Priority Rule Job Scheduling Technique that
                 Utilizes Gaps to Increase the Efficiency of Job Distribution".
               </p>
-              <p class="job-date">February 2021 – Present</p>
+              <p class="job-date">February 2021 – January 2023</p>
             </div>
 
             <div class="publication-item pb-0">
@@ -626,17 +636,6 @@
                 classes. 
               </p>
               <p class="job-date">August 2022 – December 2022</p>
-            </div>
-
-            <div class="publication-item">
-              <h4>Lecturer</h4>
-              <p class="job-description">
-                Department of Information and Communication Technology,
-                National Model College, Noakhali, Bangladesh. Here I take the
-                class on Programming, Database Management systems, Data
-                Communication.
-              </p>
-              <p class="job-date">Feb 2020 – Jan 2021</p>
             </div>
 
           </div>
@@ -689,7 +688,13 @@
           <div class="col-lg-10" data-aos="fade-up">
             <ul>
               <li>
-                Master's Research Scholarship 2021, UMP, Malaysia. 
+                Industrial GRANTS, supported by Kaneka Production, Malaysia. Grant amount: RM24000. 
+              </li>
+              <li>
+                FRGS GRANTS, supported by the Ministry of Higher Education, Malaysia. Grant amount: RM81000. 
+              </li>
+              <li>
+                Master's Research Scholarship, funded by the MHE, Malaysia. Grant amount: RM21600. 
               </li>
               <li>
                 Best Research Paper Award in the 9th International Conference
