--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Saydul Akbar Murad</h1>
       <p>
-        Graduate Research Assistant at The University of Southern Mississippi
+        <span class="typed" data-typed-items="Graduate Research Assistant at The University of Southern Mississippi"></span>
       </p>
     </div>
   </section>
