--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="row">
           <div class="col-lg-4 mt-3 text-center" data-aos="fade-right">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid about-img" alt="" />
+            <img src="assets/img/profile-img1.jpeg" class="img-fluid about-img" alt="" />
 
             <ul class="social-icon">
               <li> <a href="https://scholar.google.com/citations?hl=en&user=JSlhN54AAAAJ"><img src="assets/img/g.png"
