--- a/index.html
+++ b/index.html
@@ -219,7 +219,29 @@
 
             <div class="job-description p-2 ">
               <p>
-                [2]. Abu Jafar Md Muzahid, Syafiq Fauzi Kamarulzaman,
+                [2]. Nusrat Jahan Prottasha, <strong> Saydul Akbar Murad</strong>, Abu Jafar Md Muzahid, 
+                Masud Rana, Md Kowsher, Apurba Adhikary, Sujit Biswas, Anupam Kumar Bairagi  <strong> “Impact learning: 
+                  A learning method from features impact and competition” In </strong> Journal of Computational Science.
+                   <strong>(IF 3.817) </strong>
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/n1(23).pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                    href="https://www.sciencedirect.com/science/article/abs/pii/S1877750323000716">Link</a>
+                </button>
+              </div>
+            </div>
+
+
+            <div class="job-description p-2 ">
+              <p>
+                [3]. Abu Jafar Md Muzahid, Syafiq Fauzi Kamarulzaman,
                 Md Arafatur Rahman, <strong> Saydul Akbar Murad</strong>, Md Abdus Samad Kamal and Ali H Alenezi <strong> “Multiple vehicle cooperation
                 and collision avoidance in automated vehicles: 
                 survey and an AI-enabled conceptual framework” </strong> Scientific Reports. <strong>(IF 4.996) </strong>
@@ -242,7 +264,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [3]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
+                [4]. <strong> Saydul Akbar Murad</strong>, ABU JAFAR MD
                 MUZAHID and Apurba Adhikary <strong> “AI Powered Asthma Prediction
                 Towards Treatment Formulation: An Android App Approach” </strong> in
                 Intelligent Automation & Soft Computing. <strong>(IF 3.41) </strong>
@@ -264,7 +286,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [4]. Apurba Adhikary, Joy Bhuiya,
+                [5]. Apurba Adhikary, Joy Bhuiya,
                 <strong>Saydul Akbar Murad</strong>, Md. Bipul Hossain, K. M.
                 Aslam Uddin,MD Estihad Faysal, Abidur Rahaman, Anupam Kumar
                 Bairagi <strong> “Performance Evaluation of Micro Lens Arrays:
@@ -286,7 +308,7 @@
             </div>
             <div class="job-description p-2 ">
               <p>
-                [5]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
+                [6]. Nusrat Jahan Prottasha, Abdullah Sami, MD Kowsher,
                 <strong>Saydul Akbar Murad</strong>, Anupam Kumar Bairagi,
                 Mehedi Masud, and Mohammed Baz <strong> “Transfer Learning for
                 Sentiment Analysis Using BERT Base Supervised Fine Tuning” </strong> in
@@ -309,7 +331,7 @@
             <div class="">
               <div class="job-description p-2 ">
                 <p>
-                  [6]. Israt Jahan, K. M. Aslam Uddin,
+                  [7]. Israt Jahan, K. M. Aslam Uddin,
                   <strong>Saydul Akbar Murad</strong>, M. Saef Ullah Miah,
                   Tanvir Zaman Khan, Mehedi Masud, Sultan Aljahdali and Anupam Kumar Bairagi  <strong> “4D: A Real-Time Driver
                   Drowsiness Detector
@@ -369,7 +391,28 @@
 
             <div class="job-description p-2 ">
               <p>
-                [2]. Apurba Adhikary, <strong>Saydul Akbar Murad</strong>, Md. Shirajum Munir, and Choong Seon Hong 
+                [2]. <strong>Saydul Akbar Murad,</strong>, Nick Rahimi, Indranil Roy Bidyut Gupta 
+                <strong>“Design of a New Secured Hierarchical Peer-to-Peer Fog 
+                  Architecture Based on Linear Diophantine Equation”</strong>. 38th International Conference on 
+                  Computers and Their Applications.
+              </p>
+            </div>
+            <div>
+              <div class="pdf-button ">
+                <button onClick="openTab(this)" href="#" name="assets/files/c-1.pdf" type="button"
+                  class="btn btn-sm btn-outline-dark pdf-btn  pl-4 pr-4 mb-2">
+                  Pdf
+                </button>
+                <button type="button" class="btn btn-sm link-btn btn-outline-success pl-4 pr-4 mb-2">
+                  <a
+                    href="https://easychair.org/publications/paper/f7L9">Link</a>
+                </button>
+              </div>
+            </div>
+
+            <div class="job-description p-2 ">
+              <p>
+                [3]. Apurba Adhikary, <strong>Saydul Akbar Murad</strong>, Md. Shirajum Munir, and Choong Seon Hong 
                 <strong>“Edge Assisted Crime Prediction and Evaluation
                   Framework for Machine Learning Algorithms”</strong>. 2022 International Conference on Information Networking (ICOIN).
               </p>
@@ -390,7 +433,7 @@
 
             <div class="job-description p-2 ">
               <p>
-                [3]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal Bin M
+                [4]. <strong>Saydul Akbar Murad</strong>, Zafril Rizal Bin M
                 Azmi, Nusrat Jahan Prottasha, and Md Kowsher
                 <strong>“Computer-aided system for extending the performance of
                   diabetes analysis and prediction”</strong>
@@ -413,7 +456,7 @@
             </div>
             <div class="job-description p-2 ">
               <p>
-                [4]. <strong>Saydul Akbar Murad</strong>, ABU JAFAR MD MUZAHID,
+                [5]. <strong>Saydul Akbar Murad</strong>, ABU JAFAR MD MUZAHID,
                 Zafril Rizal Bin M Azmi and Imran Sunny
                 <strong>“Comparative study on job scheduling using priority rule
                   and machine learning.”</strong>
@@ -435,7 +478,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [5]. Md Shamimul Islam, Md Mahedi Hasan, Sohaib Abdullah,
+                  [6]. Md Shamimul Islam, Md Mahedi Hasan, Sohaib Abdullah,
                   Jalal Uddin Md Akbar, N H M Arafat,
                   <strong>Saydul Akbar Murad</strong>
                   <strong>“A deep Spatio-temporal network for vision-based sexual
@@ -457,7 +500,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [6]. ABU JAFAR MD MUZAHID, Md. Abdur Rahim,<strong>Saydul Akbar Murad</strong>, Syafiq Fauzi
+                  [7]. ABU JAFAR MD MUZAHID, Md. Abdur Rahim,<strong>Saydul Akbar Murad</strong>, Syafiq Fauzi
                   Kamrulzaman and Md Arafatur Rahman
                   <strong>“Optimal Safety Planning and driving Decision-Making for
                     Multiple Autonomous Vehicles: A learning Based
@@ -479,7 +522,7 @@
               </div>
               <div class="job-description p-2 ">
                 <p>
-                  [7]. N H M Arafat, Md Ileas Pramanik, Abu Jafar Md Muzahid,
+                  [8]. N H M Arafat, Md Ileas Pramanik, Abu Jafar Md Muzahid,
                   Bibo Lu, Sumaiya Jahan and
                   <strong>Saydul Akbar Murad</strong>
                   <strong>“A Conceptual Anonymity Model to Ensure Privacy for
@@ -729,6 +772,9 @@
             </div>
             <ul>
               <li>
+                IEEE Internet of Things
+              </li>
+              <li>
                 IEEE Access
               </li>
               <li>
@@ -771,6 +817,9 @@
               <h5>Workshops And Presentation</h5>
             </div>
             <ul>
+              <li class="voluntary-li"> 
+                <strong>Oral Presentation</strong>, at 38th International Conference on Computers and Their Applications, USA.
+              </li>
               <li class="voluntary-li"> 
                 <strong>Oral Presentation</strong>, at National Conference for Postgraduate Research (NCON-PGR), 2022, UMP, Malaysia.
               </li>
