--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
         <div class="section-title">
           <h2>About</h2>
           <p class="job-description">
-            I am currently a PhD student at the School of Computing Sciences & Engineering in Southern Mississippi University, USA, 
-            where I am working on Peer-to-Peer Networks. My previous academic achievement includes a Master of Science in 
-            Computer Science from University Malaysia Pahang, where my research focused on Job Scheduling Technique for Cloud Computing. 
-            I also hold a Bachelor's degree in Information and Communication Engineering (ICE) from Noakhali Science and Technology 
-            University (NSTU), Noakhali, Bangladesh.
+            Saydul Akbar Murad is a dedicated researcher currently pursuing his PhD in Computer Science at the University of Southern Mississippi, USA.
+             He has previously completed his master's degree in Malaysia and his undergraduate education in Bangladesh. 
+             He has experience as a lecturer at the International Islamic University Chittagong, Bangladesh. 
+             His current research focus is on Brain-Computer Interface (BCI), building upon his past work in P2P Communication and cloud computing. 
+             Additionally, Murad serves as an editor for the Journal of Computer Science, 
+            contributing his deep knowledge and expertise in the field.
           </p>
         </div>
 
